# SciDataLib

./: .gitignore  LICENSE.txt  Pipfile  README.md  chemblAll.py  chemblcontext.py  chembltest.py  codecov.yml  conf.py  example.py  example2.py  example3.py  index.rst  manage.py  model.py  pyproject.toml  readme.rst  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: actions.yml  releases.yml  test-for-release-format.yml  test-releases.yml
SciDataLib/: SciData.py  example.py  settings.py  test_SciData.py  urls.py  wsgi.py
docs/: scidatalib.rst
docs/source/: about.rst  conf.py  index.rst
examples/: example.py  example2.py  example3.py  testnum.py
mysite/: settings.py
scidata/: Router.py  __init__.py  apps.py  chemblcontext.py  chembldb.py  chembldb26.py  chembldb27.py  chembltest.py  crosswalks.py  dsstoxdb.py  dsstoxtest.py  mariadb.py  model.py  models.py  sciflowdb.py  serializers.py  setup.py
scidata/migrations/: 0001_initial.py
scidatalib/: cli.py  scidata.py
scidatalib/io/: __init__.py  formats.py  jcamp.py  rruff.py
tests/: __init__.py  test_SciData.py  test_cli.py  test_scidata.py
tests/data/jcamp/: hnmr_ethanol.jdx  infrared_ethanol.jdx  neutron_emodine.jdx  raman_tannic_acid.jdx
tests/data/rruff/: raman_soddyite.rruff
tests/io/: test_formats.py  test_jcamp.py  test_rruff.py
