[tool.poetry]
name = "SciDataLib"
version = "v0.2.6-alpha.5"
description = "Python library for development of SciData JSON-LD files"
authors = [
    "Stuart Chalk <schalk@unf.edu>",
    "Dylan Johnson <n01448636@unf.edu>",
    "Marshall McDonnell <mcdonnellmt@ornl.gov>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ChalkLab/SciDataLib"
repository = "https://github.com/ChalkLab/SciDataLib"
keywords = ["scidata", "scidatalib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.scripts]
scidatalib = "scidatalib.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
