[tool.poetry]
name = "SciDataLib"
version = "v0.4.1"
description = "Python library for development of SciData JSON-LD files"
authors = [
    "Stuart Chalk <schalk@unf.edu>",
    "Dylan Johnson <dylan.johnson@nih.gov>",
    "Marshall McDonnell <mcdonnellmt@ornl.gov>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chalklab/SciDataLib"
repository = "https://github.com/chalklab/SciDataLib"
keywords = ["scidata", "scidatalib"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.scripts]
scidatalib = "scidatalib.cli:cli"

[tool.poetry.dependencies]
python = "^=3.10"
numpy = "^=2.3.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.1.1"
pytest = "^8.4.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
