[metadata]
# replace with your username:
name = SciDataLib
version = 0.1.0
url = https://github.com/ChalkLab/SciDataLib
author = Dylan Johnson
author_email = n01448636@unf.edu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Python library for development of SciData JSON-LD files
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
