[metadata]
# replace with your username:
name = SciDataLib
version = 0.2.4
url = https://github.com/ChalkLab/SciDataLib
author = 'Dylan Johnson, Marshall McDonnell, Stuart Chalk'
author_email = 'n01448636@unf.edu, mcdonnellmt@ornl.gov, schalk@unf.edu'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Python library for creation of SciData JSON-LD files
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6

[flake8]
 # add options

